--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,7 +54,7 @@
                         android:id="@+id/emailCnx"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="N° Téléphone"
+                        android:hint="Identifiant"
                         android:inputType="phone" />
                 </com.google.android.material.textfield.TextInputLayout>
 
