--- a/app/src/main/res/layout/activity_main_detail_operation.xml
+++ b/app/src/main/res/layout/activity_main_detail_operation.xml
@@ -49,7 +49,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView5"
                 android:layout_width="match_parent"
-                android:layout_height="500dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginBottom="20dp"
@@ -228,7 +228,7 @@
                         android:layout_marginLeft="15dp"
                         android:layout_marginTop="8dp"
                         android:layout_marginRight="15dp"
-                        android:layout_marginBottom="30dp">
+                        android:layout_marginBottom="20dp">
 
                         <TextView
                             android:id="@+id/textView8"
@@ -254,39 +254,44 @@
                             app:layout_constraintTop_toTopOf="parent" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/text_info_details_operation"
+                            android:layout_width="229dp"
+                            android:layout_height="49dp"
+                            android:layout_gravity="center"
+                            android:textAlignment="center"
+                            android:text="@string/details_operation_page_libelle_miss_image"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/cardView2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="20dp"
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="0dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent">
+
+                            <com.ortiz.touchview.TouchImageView
+                                android:id="@+id/preview_details_operation"
+                                android:layout_width="265dp"
+                                android:layout_height="180dp"
+                                android:scaleType="centerCrop"
+                                tools:src="@drawable/gradient" />
+                        </androidx.cardview.widget.CardView>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cardView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginBottom="5dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="0dp"
-                app:layout_constraintBottom_toBottomOf="@+id/cardView5"
-                app:layout_constraintEnd_toEndOf="@+id/cardView5"
-                app:layout_constraintStart_toStartOf="@+id/cardView5">
-
-                <ImageView
-                    android:id="@+id/preview_details_operation"
-                    android:layout_width="265dp"
-                    android:layout_height="180dp"
-                    android:scaleType="centerCrop"
-                    tools:src="@drawable/gradient" />
-            </androidx.cardview.widget.CardView>
-
-            <TextView
-                android:id="@+id/text_info_details_operation"
-                android:layout_width="229dp"
-                android:layout_height="49dp"
-                android:textAlignment="center"
-                android:text="@string/details_operation_page_libelle_miss_image"
-                app:layout_constraintBottom_toBottomOf="@+id/cardView2"
-                app:layout_constraintEnd_toEndOf="@+id/cardView2"
-                app:layout_constraintStart_toStartOf="@+id/cardView2"
-                app:layout_constraintTop_toTopOf="@+id/cardView2" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
