--- a/app/src/main/res/layout/fragment_superviseur_list_assistant.xml
+++ b/app/src/main/res/layout/fragment_superviseur_list_assistant.xml
@@ -68,14 +68,14 @@
         tools:itemCount="3"
         tools:listitem="@layout/item_list_assistant" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <Button
         android:id="@+id/superviseur_logout_button"
         android:layout_width="wrap_content"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:text="Déconnexion"
         android:textColor="@color/color_item_amount"
         android:paddingHorizontal="25dp"
-        android:background="@drawable/background_circular"
+        android:backgroundTint="@color/white"
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
