--- a/app/src/main/res/layout/fragment_assistant_point_international.xml
+++ b/app/src/main/res/layout/fragment_assistant_point_international.xml
@@ -160,7 +160,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
-                        android:text="Solde retrait International"/>
+                        android:text="Solde Retrait International"/>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
