--- a/app/src/main/res/layout/fragment_assistant_settings.xml
+++ b/app/src/main/res/layout/fragment_assistant_settings.xml
@@ -191,6 +191,7 @@
 
                     <TextView
                         android:id="@+id/assistant_settings_num_abonnement"
+                        android:textAllCaps="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
