--- a/app/src/main/res/layout/fragment_superviseur_home.xml
+++ b/app/src/main/res/layout/fragment_superviseur_home.xml
@@ -78,6 +78,32 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="nom assistant" />
 
+            <LinearLayout
+                android:id="@+id/LL"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintStart_toStartOf="@+id/nom_assistant"
+                app:layout_constraintTop_toBottomOf="@+id/nom_assistant">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Assignation: " />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:text="Transfert"/>
+                <TextView
+                    android:id="@+id/module_assistant"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:textStyle="bold"
+                    tools:text="Inter"/>
+            </LinearLayout>
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView7"
                 android:layout_width="match_parent"
@@ -85,10 +111,10 @@
                 android:layout_marginHorizontal="15dp"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="0dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/nom_assistant">
+                app:layout_constraintTop_toBottomOf="@+id/LL">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
