--- a/app/src/main/res/layout/fragment_assistant_point_international.xml
+++ b/app/src/main/res/layout/fragment_assistant_point_international.xml
@@ -199,6 +199,7 @@
                             android:hint="Montant"
                             android:inputType="number"
                             android:paddingStart="30dp"
+                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -250,6 +251,7 @@
                             android:hint="Montant"
                             android:inputType="number"
                             android:paddingStart="30dp"
+                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -333,6 +335,7 @@
                             android:hint="Montant"
                             android:inputType="number"
                             android:paddingStart="30dp"
+                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -382,6 +385,7 @@
                             android:hint="Montant"
                             android:inputType="number"
                             android:paddingStart="30dp"
+                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
