--- a/app/src/main/res/layout/fragment_assistant_point_national.xml
+++ b/app/src/main/res/layout/fragment_assistant_point_national.xml
@@ -135,6 +135,7 @@
                             android:hint="Montant"
                             android:inputType="number"
                             android:paddingStart="30dp"
+                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -180,6 +181,7 @@
                             android:hint="Montant"
                             android:inputType="number"
                             android:paddingStart="30dp"
+                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -225,6 +227,7 @@
                             android:hint="Montant"
                             android:inputType="number"
                             android:paddingStart="30dp"
+                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -270,6 +273,7 @@
                             android:hint="Montant"
                             android:inputType="number"
                             android:paddingStart="30dp"
+                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -315,6 +319,7 @@
                             android:hint="Montant"
                             android:inputType="number"
                             android:paddingStart="30dp"
+                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -398,6 +403,7 @@
                             android:hint="Montant"
                             android:inputType="number"
                             android:paddingStart="30dp"
+                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -447,6 +453,7 @@
                             android:hint="Montant"
                             android:inputType="number"
                             android:paddingStart="30dp"
+                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
