--- a/app/src/main/res/layout/activity_superviseur_detail_point.xml
+++ b/app/src/main/res/layout/activity_superviseur_detail_point.xml
@@ -89,8 +89,9 @@
                         android:id="@+id/superviseur_detail_point_montant_orange_all"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
                         android:padding="10dp"
+                        style="@style/inputFont"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/background_circular"/>
 
@@ -117,6 +118,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:padding="10dp"
+                        style="@style/inputFont"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/background_circular"/>
 
@@ -143,6 +145,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:padding="10dp"
+                        style="@style/inputFont"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/background_circular"/>
 
@@ -169,6 +172,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:padding="10dp"
+                        style="@style/inputFont"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/background_circular"/>
 
@@ -195,6 +199,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:padding="10dp"
+                        style="@style/inputFont"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/background_circular"/>
                 </LinearLayout>
@@ -240,6 +245,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:padding="10dp"
+                        style="@style/inputFont"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/background_circular"/>
 
@@ -255,6 +261,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:padding="10dp"
+                        style="@style/inputFont"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/background_circular"/>
                 </LinearLayout>
@@ -303,6 +310,7 @@
                         android:layout_marginTop="5dp"
                         android:background="@drawable/background_circular"
                         android:padding="10dp"
+                        style="@style/inputFont"
                         android:textSize="18sp" />
 
                     <TextView
@@ -320,6 +328,7 @@
                         android:layout_marginBottom="20dp"
                         android:background="@drawable/background_circular"
                         android:padding="10dp"
+                        style="@style/inputFont"
                         android:textSize="18sp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -350,6 +359,7 @@
                         android:text="Resultat"
                         android:textSize="20sp"
                         android:textStyle="bold"
+                        style="@style/inputFont"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
