--- a/app/src/main/res/layout/activity_superviseur_detail_point_inter.xml
+++ b/app/src/main/res/layout/activity_superviseur_detail_point_inter.xml
@@ -80,8 +80,9 @@
                         android:id="@+id/superviseur_detail_point_montant_retrait_inter"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
                         android:padding="10dp"
+                        style="@style/inputFont"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/background_circular"/>
 
@@ -89,6 +90,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
+                        android:layout_marginTop="10dp"
                         android:layout_marginHorizontal="5dp"
                         android:text="Solde Envoi International" />
 
@@ -98,6 +100,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:padding="10dp"
+                        style="@style/inputFont"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/background_circular"/>
 
@@ -145,6 +148,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
+                        style="@style/inputFont"
                         android:background="@drawable/background_circular"
                         android:padding="10dp"
                         android:textSize="18sp" />
@@ -164,6 +168,7 @@
                         android:layout_marginBottom="20dp"
                         android:background="@drawable/background_circular"
                         android:padding="10dp"
+                        style="@style/inputFont"
                         android:textSize="18sp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -194,6 +199,7 @@
                         android:text="Resultat"
                         android:textSize="20sp"
                         android:textStyle="bold"
+                        style="@style/inputFont"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
