--- a/app/src/main/res/layout/fragment_assistant_point.xml
+++ b/app/src/main/res/layout/fragment_assistant_point.xml
@@ -132,6 +132,7 @@
                             android:layout_height="0dp"
                             android:layout_marginHorizontal="20dp"
                             android:background="@color/white"
+                            style="@style/inputFont"
                             android:hint="Montant"
                             android:inputType="number"
                             android:paddingStart="30dp"
@@ -177,6 +178,7 @@
                             android:layout_height="0dp"
                             android:layout_marginHorizontal="20dp"
                             android:background="@color/white"
+                            style="@style/inputFont"
                             android:hint="Montant"
                             android:inputType="number"
                             android:paddingStart="30dp"
@@ -224,6 +226,7 @@
                             android:background="@color/white"
                             android:hint="Montant"
                             android:inputType="number"
+                            style="@style/inputFont"
                             android:paddingStart="30dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -270,6 +273,7 @@
                             android:hint="Montant"
                             android:inputType="number"
                             android:paddingStart="30dp"
+                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -315,6 +319,7 @@
                             android:hint="Montant"
                             android:inputType="number"
                             android:paddingStart="30dp"
+                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -530,6 +535,7 @@
                             android:hint="Montant"
                             android:inputType="number"
                             android:paddingStart="30dp"
+                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -581,6 +587,7 @@
                             android:hint="Montant"
                             android:inputType="number"
                             android:paddingStart="30dp"
+                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
