--- a/app/src/main/res/layout/fragment_superviseur_home.xml
+++ b/app/src/main/res/layout/fragment_superviseur_home.xml
@@ -26,7 +26,7 @@
                     android:layout_width="50dp"
                     android:layout_height="40dp"
                     android:layout_margin="10dp"
-                    android:src="@drawable/baseline_keyboard_backspace_24"
+                    android:src="@drawable/baseline_arrow_back_24"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -61,6 +61,7 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:textColor="#108BED"
+                style="@style/inputFont"
                 app:layout_constraintBottom_toBottomOf="@+id/nom_assistant"
                 app:layout_constraintEnd_toEndOf="@+id/cardView7"
                 app:layout_constraintTop_toTopOf="@+id/nom_assistant" />
