--- a/app/src/main/res/layout/item_list_assistant_home.xml
+++ b/app/src/main/res/layout/item_list_assistant_home.xml
@@ -6,6 +6,7 @@
     app:cardElevation="10dp"
     app:cardCornerRadius="10dp"
     android:layout_margin="10dp"
+    android:backgroundTint="#FF9800"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:textColor="#000"
+            android:textColor="#FFF"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:textStyle="bold"
-            android:textColor="#877676"
+            android:textColor="#000"
             android:layout_marginTop="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/nomCompletAssistHome"
